--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-express-heroku",
+  "name": "employeetracker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,7 +13,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "Paul Cwik",
+  "author": "Erik Tomlinson",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
